--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
 node_modules/
 .env
 *.log
+
+codebase.md
+project-structure.md
+
+# Local Knowledge Base - ignore large repos but keep docs
+lkb/repos/*
+!lkb/repos/.gitkeep
+lkb/temp/*
+!lkb/temp/.gitkeep
