--- a/package.json
+++ b/package.json
@@ -10,14 +10,12 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "discord.js": "^14.20.0",
-    "pino": "^9.7.0",
-    "pino-pretty": "^13.0.0"
+    "@logtape/logtape": "^1.0.0",
+    "discord.js": "^14.21.0"
   },
   "devDependencies": {
     "@types/bun": "^1.2.17",
-    "@types/node": "^24.0.4",
-    "@types/pino": "^7.0.5",
+    "@types/node": "^24.0.7",
     "typescript": "^5.8.3"
   },
   "type": "module"
